--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -71,6 +71,7 @@
       background: linear-gradient(to right, #a8230d, #d88f0a);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
+       display:row
     }
 
 
