--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -86,10 +86,10 @@
 }
 
 .task-btn {
-  background-color: #FFC107;
-  color: white;
+  background-color: #000000;
+  color: red;
   padding: 12px 25px;
-  border-radius: 5px;
+  border-radius: 10px;
   font-size: 14px;
   cursor: pointer;
   width: 100%;
