--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -31,7 +31,7 @@
    
 
     /* App icon over the banner */
-    .locker-icon {
+    .Icon {
       position: absolute;
       bottom: -60px;
       left: 50%;
@@ -75,7 +75,8 @@
   background-color: #000000;
   color: red;
   padding: 12px 25px;
-  border-radius: 10px;
+  margin: 10px;
+ border-radius: 10px;
   font-size: 14px;
   cursor: pointer;
   width: 100%;
