--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -72,7 +72,7 @@
 }
 
 .task-btn {
-  background-color: #000000;
+  background-color: white;
   color: red;
   padding: 12px 25px;
  border-radius: 10px;
