--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -31,7 +31,10 @@
 
     /* App icon over the banner */
     .Icon {
-     
+     position: absolute;
+      bottom: -60px;
+      left: 50%;
+      transform: translateX(-50%);
       width: 120px;
       height: 120px;
       border-radius: 25px;
