--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -32,8 +32,8 @@
     /* App icon over the banner */
     .Icon {
    
-      width: 120px;
-      height: 120px;
+      width: 100%;
+      height: 100%;
       border-radius: 25px;
       border: 5px solid white;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
