--- a/assets/css/locker.css
+++ b/assets/css/locker.css
@@ -69,10 +69,10 @@
 }
 
 .task-btn {
-  background-color: white;
-  color: red;
+  background-color: #7d0000;
+  color: #ffffff;
   padding: 12px 25px;
- border-radius: 10px;
+ border-radius: 15px;
   font-size: 14px;
   cursor: pointer;
   width: 100%;
